# rusty-battery

./: .gitlint  .pre-commit-config.yaml  .pre-commit-config.yml  .pre-commit-hooks.yaml  .prettierrc.yaml  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  README.md  _config.yml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  ci.yml  clippy.yml  lint.yml  publish.yml  release.yml  test.yml
docs/: README.md  _config.yml
docs/_includes/: head-custom-google-analytics.html  head-custom.html
examples/systemd/: rusty-battery.service
src/: application.rs  battery.rs  cli.rs  common.rs  error.rs  event.rs  logger.rs  main.rs  notification.rs  notify.rs  parser.rs
src/device/: battery.rs  kde_connect.rs  mod.rs
src/notification/: desktop.rs  kde_connect.rs  message.rs  mod.rs  operation.rs
