[package]
name = "rusty-battery"
version = "0.2.1"
edition = "2021"
description = "CLI tool which notifies you when laptop battery reaches a threshold."
documentation = "https://rustybattery.lukaskucera.com"
readme = "README.md"
homepage = "https://rustybattery.lukaskucera.com"
repository = "https://github.com/kucera-lukas/rusty-battery"
license = "MIT"
keywords = ["cli", "battery", "notification", "kdeconnect", "linux"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3"
battery = "0.7.8"
notify-rust = "4"
cached = "0.39.0"
thiserror = "1.0.30"
env_logger = "0.9.0"
log = "0.4.14"
chrono = "0.4.19"
