[package]
name = "rusty-battery"
version = "0.6.1"
edition = "2021"
description = "CLI tool which notifies you when laptop battery reaches a threshold."
authors = ["Lukas Kucera <lukas.kucera.g@gmail.com>"]
documentation = "https://rustybattery.lukaskucera.com"
readme = "docs/README.md"
homepage = "https://rustybattery.lukaskucera.com"
repository = "https://github.com/kucera-lukas/rusty-battery"
license = "MIT"
keywords = ["cli", "battery", "notification", "kdeconnect", "linux"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.1.7", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
battery = "0.7.8"
notify-rust = "4"
ctrlc = { version = "3.0", features = ["termination"] }
thiserror = "1.0.37"
env_logger = "0.9.0"
log = "0.4.14"
chrono = "0.4.19"
